--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,9 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;900&family=Open+Sans:wght@300;400;600;700&display=swap');
+
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   margin: 0;
   padding: 0;
@@ -8,6 +13,7 @@ body {
   color: #fcfcfc;
   -webkit-font-smoothing: antialiased;
   -webkit-overflow-scrolling: touch;
+  overflow-x: hidden;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -35,6 +41,7 @@ p {
 ul li {
   letter-spacing: 2.6px;
   padding-bottom: 26px;
+  list-style-type: none;
 }
 
 a {
@@ -48,6 +55,253 @@ a {
     box-sizing: border-box;
     padding-left: 12px;
     padding-right: 12px;
+}
+
+/* HEADER */
+
+header {
+  z-index: 200;
+  min-height: 60px;
+  background: #fff;
+  position: absolute;
+  width: 100%;
+  top: 0;
+}
+
+header nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+
+header .logo {
+  flex: 0 0 auto;
+  width: 10%;
+  z-index: 100;
+}
+
+header .socials {
+  display: flex;
+  justify-content: center;
+  flex: 0 0 auto;
+  width: 20%;
+  font-size: 1.6rem;
+}
+
+header .socials i {
+  padding: 0;
+  padding-right: 24px;
+  cursor: pointer;
+}
+
+header .socials a {
+  position: relative;
+}
+
+header .socials a:before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -10px;
+  top: -10px;
+  bottom: auto;
+  width: 30px;
+  height: 30px;
+  background: rgb(226 107 28 / 100%);
+  border-radius: 8px;
+  transition: all 300ms ease-in-out;
+  z-index: -1;
+  opacity: 0;
+}
+
+  header .socials a:hover:before {
+    left: -6px;
+    top: 0px;
+    opacity: .5;
+  }
+
+header .logo img {
+  max-height: 80px;
+  width: auto;
+}
+
+header .navbar {
+  flex: 0 0 auto;
+  width: 70%;
+}
+
+header .navbar > ul {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: space-evenly;
+  padding-left: 0;
+}
+
+header .navbar > ul li {
+  padding: 0;
+  position: relative;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+header .navbar > ul li:after {
+  position: absolute;
+  content: '';
+  top: auto;
+  right: auto;
+  bottom: 0;
+  left: -50%;
+  width: 60px;
+  height: 4px;
+  background: #1d1f20;
+  opacity: 0;
+  transition: all 300ms ease-in-out;
+}
+
+header a {
+  color: #1d1f20;
+  font-weight: 600;
+  font-family: 'Montserrat', sans-serif;
+}
+
+header .navbar > ul li:hover:after, header li:focus:after {
+  left: 0;
+  opacity: 1;
+}
+
+#back-to-top {
+  z-index: 100;
+  position: fixed;
+  bottom: 5%;
+  right: 5%;
+  width: 40px;
+  height: 40px;
+  background: #250f65;
+  color: #eaeaea;
+  border-radius: 50%;
+  border-width: 0;
+  cursor: pointer;
+  box-shadow: 0 2px 1px 0 rgb(0 0 0 / 20%);
+  display: none;
+}
+
+/* MOBILE MENU */
+
+.navToggle {
+  z-index: 111;
+  position: absolute;
+  width: auto;
+  height: 80px;
+  top: 0;
+  right: 15px;
+  cursor: pointer;
+}
+
+.navToggle .toggle-icon {
+  -webkit-transition: all 0.4s ease-out;
+  position: relative;
+  top: 40px;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  width: 50px;
+  height: 2px;
+  background-color: #333;
+}
+.navToggle .toggle-icon:before, .navToggle .toggle-icon:after {
+  -webkit-transition: all 0.25s ease-out;
+  position: absolute;
+  width: 50px;
+  height: 2px;
+  background-color: #333;
+  content: "";
+}
+.navToggle .toggle-icon:before {
+  top: -20px;
+  left: 0;
+}
+.navToggle .toggle-icon:after {
+  top: 20px;
+  left: 0;
+}
+.navToggle:hover .toggle-icon {
+  background-color: #555;
+}
+.navToggle:hover .toggle-icon:before {
+  top: -25px;
+  background-color: #555;
+}
+.navToggle:hover .toggle-icon:after {
+  top: 25px;
+  background-color: #555;
+}
+.navToggle.open .toggle-icon {
+  -webkit-transition: all 0.4s ease-out;
+  background-color: transparent;
+  -webkit-transform: rotate(180deg);
+}
+.navToggle.open .toggle-icon:before {
+  top: 0;
+  -webkit-transform: rotate(45deg);
+}
+.navToggle.open .toggle-icon:after {
+  top: 0;
+  -webkit-transform: rotate(-45deg);
+}
+
+#mobile-menu {
+  z-index: 50;
+  left: 0;
+  right: 0;
+  top: auto;
+  margin: 0 auto;
+  position: absolute;
+  width: 100%;
+  background: #fff;
+  height: 0px;
+  overflow: hidden;
+  text-align: center;
+  border-bottom: 1px solid transparent;
+  -webkit-transition: all 0.5s;
+}
+#mobile-menu ul {
+  list-style: none;
+  padding: 0;
+  font-family: sans-serif;
+  font-size: 1rem;
+  font-weight: 100;
+  text-transform: uppercase;
+}
+#mobile-menu li:first-child {
+  margin-top: 0;
+}
+#mobile-menu li {
+  margin: 30px 0;
+  padding: 5px 0;
+  cursor: pointer;
+  letter-spacing: 0.5em;
+  text-decoration: none;
+  -webkit-transition: all 0.25s;
+}
+#mobile-menu li:hover {
+  text-decoration: underline;
+}
+#mobile-menu.active {
+  height: 380px;
+  border-bottom: 1px solid #1d1f20;
+}
+
+.socials-mobile {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 30px;
+}
+
+.socials-mobile i {
+  padding-right: 16px;
 }
 
 /* PROMO */
@@ -407,8 +661,10 @@ a {
 .second-promo {
   padding-top: 120px;
   padding-bottom: 80px;
-  background: linear-gradient(164deg, rgba(37,15,101,1) 67%, rgba(97,49,181,1) 100%);
-
+  background: linear-gradient(
+164deg, rgba(37,15,101,1) 0%, rgba(97,49,181,1) 50%,rgba(37,15,101,1) 100%);
+  background-repeat: no-repeat;
+  background-size: 100% 200%;
 }
 
 .second-promo h2 {
@@ -418,6 +674,13 @@ a {
 .firstPromoBlock {
   display: flex;
   position: relative;
+  flex: 0 0 auto;
+  width: 100%;
+}
+
+.firstPromoBlock > div {
+  flex: 0 0 auto;
+  width: 50%;
 }
 
 .firstPromoBlock:before {
@@ -436,9 +699,14 @@ a {
   z-index: 10;
 }
 
+.firstPromoBlock div:first-child img {
+  max-width: 100%;
+}
+
 .firstPromoBlock div:last-child {
   padding-top: 120px;
   padding-left: 80px;
+  box-sizing: border-box;
 }
 
 .firstPromoBlock p {
@@ -479,11 +747,15 @@ a {
   background: #fff;
   border-radius: 16px;
   box-shadow: -8px 6px 0 4px rgb(255 255 255 / 40%);
+  width: auto;
 }
 
 .secondPromoBlock div {
   display: flex;
   align-items: center;
+  flex: 0 0 auto;
+  width: 33.33%;
+  justify-content: center;
 }
 
 .secondPromoBlock span {
@@ -512,16 +784,389 @@ a {
 
 /* ORDER FORM */
 
-.order {
-  padding-top: 120px;
-  padding-bottom: 80px;
+section#orderForm {
+  position: relative;
+  overflow: hidden;
+  display: flex;
+  height: 100vh;
+  align-items: center;
+  justify-content: center;
+  background: linear-gradient(
+  245deg, rgba(37,15,101,1) 67%, rgba(97,49,181,1) 0%);
+}
+
+section#orderForm:before {
+  position: absolute;
+  content: '';
+  width: 30%;
+  height: 60%;
+  background: rgb(214 112 135 / 100%);
+  border-radius: 50%;
+  bottom: -20%;
+  right: 5%;
+  filter: invert(1);
+  z-index: 1;
+}
+
+section#orderForm:after {
+  position: absolute;
+  content: '';
+  width: 50%;
+  height: 100%;
+  background: rgb(148 112 414 / 30%);
+  border-radius: 50%;
+  bottom: -24%;
+  right: -21%;
+  z-index: 1;
 }
 
 .order h2 {
   margin-bottom: 64px;
+  text-align: center;
+  text-transform: uppercase;
 }
 
-.order .container {
+.order h3 {
+  font-size: 1.8rem;
+  text-align: center;
+  margin-bottom: 40px;
+}
+
+.order h2 span {
+  color: rgb(234 178 0);
+  font-size: 3.1rem;
+}
+
+.order-main {
   display: flex;
   justify-content: space-between;
+}
+
+.price {
+  display: flex;
+  justify-content: space-around;
+}
+
+.order-info {
+  flex: 0 0 auto;
+  width: 40%;
+  z-index: 100;
+  padding: 20px;
+}
+
+.order-info span {
+  font-family: 'Montserrat', sans-serif;
+}
+
+.order-info span.discount {
+  color: rgb(234 178 0);
+  font-weight: 700;
+  font-size: 4.8rem;
+  animation: blink 2s ease-in-out alternate infinite;
+}
+
+@keyframes blink {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
+
+.order-info span:not(.discount) {
+  color: #dcdcdc;
+  font-size: 2.8rem;
+  font-weight: 600;
+  text-decoration: line-through;
+  text-decoration-style: dashed;
+  text-decoration-color: rgb(234 178 0);
+  letter-spacing: 0px;
+  animation: noBlink 6s linear alternate infinite;
+}
+
+@keyframes noBlink {
+  0% {
+    transform: translateY(0);
+  }
+    50% {
+    transform: translateY(10px);
+  }
+  100% {
+    transform: translateY(0);
+  }
+}
+
+div#countdown {
+  text-align: center;
+  font-size: 10rem;
+  background: #1d1f20;
+  padding: 10px 20px;
+  box-shadow: inset 0px 6px 3px 2px rgb(255 255 255 / 4%), 
+  inset 0px 0px 2px 1px rgb(255 255 255 / 4%), 
+  inset 2px 2px 8px 0 rgb(0 0 0 / 40%), 
+  inset -2px -2px 8px 0 rgb(0 0 0 / 40%), 
+  5px 5px 16px 4px rgb(33 33 33 / 40%), 
+  -5px -5px 16px 4px rgb(33 33 33 / 40%);
+  border-radius: 16px;
+  color: #eaeaea;
+  position: relative;
+  margin-bottom: 32px;
+  box-sizing: border-box;
+}
+
+div#countdown:after {
+  box-shadow: inset 0 -102px 0 0px rgb(0 0 0 / 20%);
+  content: '';
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
+  border-radius: 16px;
+}
+
+.order-form {
+  flex: 0 0 auto;
+  width: 40%;
+  background: rgb(29 31 32 / 50%);
+  box-sizing: border-box;
+  padding: 24px;
+  border-radius: 8px;
+  backdrop-filter: blur(5px);
+  z-index: 100;
+}
+
+.order-form label,
+.order-form input[type=text],
+.order-form input[type=tel]  {
+  display: block;
+  width: 100%;
+  font-family: 'Montserrat', sans-serif;
+}
+
+.order-form label {
+  text-transform: uppercase;
+  position: relative;
+}
+
+.order-form input[type=text],
+.order-form input[type=tel] {
+  background: #eaeaea;
+    border-width: 0;
+    border-radius: 4px;
+    height: 40px;
+    margin-top: 16px;
+    margin-bottom: 16px;
+    transition: all 600ms ease-in-out;
+    padding-left: 8px;
+    padding-right: 8px;
+    font-size: 1.2rem;
+    box-sizing: border-box;
+}
+
+.order-form input[type=text]:focus,
+.order-form input[type=tel]:focus {
+  background: #1d1f20;
+  color: #eaeaea;
+  border-width: 0;
+}
+
+.form-name, .form-tel {
+  margin-bottom: 16px;
+}
+
+.form-name input:focus +label:before {
+  position: absolute;
+  bottom: 4px;
+  top: auto;
+  left: auto;
+  right: 0;
+  content: 'Никита';
+  font-size: .8rem;
+  color: #dcdcdc;
+  background: #1d1f20;
+  border-radius: 4px;
+  padding: 8px 16px;
+  z-index: 10;
+}
+
+.form-name input:focus +label:after {
+  content: '';
+  position: absolute;
+  border: 4px;
+  width: 8px;
+  height: 8px;
+  background: #1d1f20;
+  top: auto;
+  left: auto;
+  bottom: 0;
+  right: 20px;
+  z-index: 1;
+  transform: rotate(45deg);
+}
+
+.form-tel input:focus +label:before {
+  position: absolute;
+  bottom: 4px;
+  top: auto;
+  left: auto;
+  right: 0;
+  content: '79165553535';
+  font-size: .8rem;
+  color: #dcdcdc;
+  background: #1d1f20;
+  border-radius: 4px;
+  padding: 8px 16px;
+  z-index: 10;
+}
+
+.form-tel input:focus +label:after {
+  content: '';
+  position: absolute;
+  border: 4px;
+  width: 8px;
+  height: 8px;
+  background: #1d1f20;
+  top: auto;
+  left: auto;
+  bottom: 0;
+  right: 20px;
+  z-index: 1;
+  transform: rotate(45deg);
+}
+
+input::placeholder {
+  font-size: 1.2rem;
+  color: #1d1f20;
+  opacity: 0.6;
+  padding-left: 8px;
+}
+
+.form-name, .form-tel {
+  display: flex;
+  flex-direction: column-reverse;
+}
+
+input[type=submit] {
+  margin-top: 32px;
+  display: block;
+  width: 100%;
+  cursor: pointer;
+  background: linear-gradient(102deg, 
+  rgba(234,178,0,1) 0%,  
+  rgba(226,107,28,1) 35%,
+  rgba(234,178,0,1) 70%,
+  rgba(226,107,28,1) 100%);
+  background-size: 300% 300%;
+  background-position: 0 0;
+  color: #fff;
+  font-size: 1.2rem;
+  padding: 12px 32px;
+  border-style: solid;
+  border-width: 0;
+  letter-spacing: 3px;
+  border-radius: 8px;
+  box-shadow: 0 2px 4px 0 rgb(0 0 0 / 10%);
+  transition: all 600ms ease-in-out;
+  box-sizing: border-box;
+}
+
+input[type=submit]:hover, input[type=submit]:focus {
+  background-position: 100% 50%;
+  box-shadow: 0 2px 12px 0 rgb(0 0 0 / 30%);
+}
+
+/* FOOTER */
+
+footer {
+  background: #1d1f20;
+  padding-top: 80px;
+  padding-bottom: 120px;
+}
+
+.footer {
+  display: flex;
+  justify-content: space-between;
+}
+.footer-col-1,
+.footer-col-2,
+.footer-col-3 {
+  flex: 0 0 auto;
+  width: 33.33%;
+  box-sizing: border-box;
+}
+.footer > div:not(:first-child) {
+  padding-left: 20px;
+}
+
+.footer-col-1 img {
+  max-height: 120px;
+  width: auto;
+  float: left;
+}
+
+.footer-col-1 p {
+  text-align: justify;
+  font-size: .8rem;
+}
+
+.footer-col-2 h4 {
+  text-align: center;
+  text-transform: uppercase;
+}
+
+.footer-col-2 ul {
+  padding-left: 160px;
+}
+
+.footer-col-2 ul li {
+  list-style-type: none;
+}
+
+.footer-col-2 a {
+  color: #fff;
+}
+
+.footer-col-2 a:hover {
+  color: #eaeaea;
+}
+
+.footer-col-3 {
+  text-align: center;
+}
+
+.footer-col-3 a {
+  color: #fff;
+  font-size: 24px;
+  position: relative;
+}
+
+.footer-col-3 a:not(:last-child) {
+  padding-right: 16px;
+}
+
+.footer-col-3 a:after {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: -10px;
+  top: -10px;
+  bottom: auto;
+  width: 30px;
+  height: 30px;
+  background: rgb(226 107 28 / 100%);
+  border-radius: 8px;
+  transition: all 300ms ease-in-out;
+  z-index: 1;
+  opacity: 0;
+}
+
+.footer-col-3 a:hover:after {
+  opacity: .1;
+  top: 0;
+  left: -4px;
 }
