--- a/css/media.css
+++ b/css/media.css
@@ -112,6 +112,7 @@
             rgba(97,49,181,1) 50%,
             rgba(37,15,101,1) 100%);
         padding: 80px 0 60px 0;
+        height: auto;
     }
     section.promo ul li {
         font-size: 1.1rem;
@@ -135,9 +136,6 @@
     }
     header .navbar > ul, header .socials {
         display: none!important;
-    }
-    section.promo {
-        padding: 0;
     }
     section.promo h1 {
         font-size: 2.2rem;
@@ -282,6 +280,13 @@
     }
     .product-features .product-section {
         padding: 0;
+    }
+    section.promo {
+        padding-top: 140px;
+        padding-bottom: 160px;
+    }
+    section.promo ul li {
+        font-size: .8rem;
     }
 }
 
