--- a/css/style.css
+++ b/css/style.css
@@ -63,9 +63,10 @@ header {
   z-index: 200;
   min-height: 60px;
   background: #fff;
-  position: absolute;
+  position: fixed;
   width: 100%;
   top: 0;
+  transition: all 300ms ease-in-out;
 }
 
 header nav {
@@ -122,8 +123,10 @@ header .socials a:before {
   }
 
 header .logo img {
-  max-height: 80px;
+  max-height: 50px;
   width: auto;
+  box-sizing: border-box;
+  padding-top: 10px;
 }
 
 header .navbar {
@@ -193,7 +196,7 @@ header .navbar > ul li:hover:after, header li:focus:after {
   z-index: 111;
   position: absolute;
   width: auto;
-  height: 80px;
+  height: 50px;
   top: 0;
   right: 15px;
   cursor: pointer;
@@ -202,39 +205,39 @@ header .navbar > ul li:hover:after, header li:focus:after {
 .navToggle .toggle-icon {
   -webkit-transition: all 0.4s ease-out;
   position: relative;
-  top: 40px;
+  top: 30px;
   left: 0;
   right: 0;
   margin: 0 auto;
-  width: 50px;
+  width: 40px;
   height: 2px;
   background-color: #333;
 }
 .navToggle .toggle-icon:before, .navToggle .toggle-icon:after {
   -webkit-transition: all 0.25s ease-out;
   position: absolute;
-  width: 50px;
+  width: 40px;
   height: 2px;
   background-color: #333;
   content: "";
 }
 .navToggle .toggle-icon:before {
-  top: -20px;
+  top: -13px;
   left: 0;
 }
 .navToggle .toggle-icon:after {
-  top: 20px;
+  top: 13px;
   left: 0;
 }
 .navToggle:hover .toggle-icon {
   background-color: #555;
 }
 .navToggle:hover .toggle-icon:before {
-  top: -25px;
+  top: -13px;
   background-color: #555;
 }
 .navToggle:hover .toggle-icon:after {
-  top: 25px;
+  top: 13px;
   background-color: #555;
 }
 .navToggle.open .toggle-icon {
@@ -275,7 +278,7 @@ header .navbar > ul li:hover:after, header li:focus:after {
   text-transform: uppercase;
 }
 #mobile-menu li:first-child {
-  margin-top: 0;
+  margin-top: 40px;
 }
 #mobile-menu li {
   margin: 30px 0;
@@ -289,7 +292,7 @@ header .navbar > ul li:hover:after, header li:focus:after {
   text-decoration: underline;
 }
 #mobile-menu.active {
-  height: 380px;
+  height: 400px;
   border-bottom: 1px solid #1d1f20;
 }
 
@@ -302,6 +305,10 @@ header .navbar > ul li:hover:after, header li:focus:after {
 
 .socials-mobile i {
   padding-right: 16px;
+}
+
+.nav-up {
+  top: -94px;
 }
 
 /* PROMO */
